[infra-proxy-service] Add Environments gRPC & HTTP API
